--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,17 +4,19 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.MainActivity">
+    tools:context=".ui.MainActivity"
+    android:background="@color/white"
+
+    >
 
 
         <androidx.viewpager.widget.ViewPager
             android:id="@+id/viewPagerOnBoarding"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-
-            android:layout_marginBottom="@dimen/_50sdp"/>
+            app:layout_constraintTop_toTopOf="parent" />
 
         <com.google.android.material.tabs.TabLayout
             android:id="@+id/tabLayoutIndicator"
@@ -26,17 +28,44 @@
             app:layout_constraintStart_toStartOf="parent"
             app:tabBackground="@drawable/tab_selector"
             app:tabGravity="center"
+            android:background="@color/white"
+
             app:tabIndicatorHeight="0dp" />
 
         <TextView
+            android:id="@+id/tv_Skip"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="@dimen/_20sdp"
             android:text="تخطي"
-            android:textSize="@dimen/_16ssp"
-            android:fontFamily="@font/tajawal_bold"
+            style="@style/textView_purple_medium_bold"
+            android:textColor="@color/grey"
+            android:textSize="@dimen/_12ssp"
             app:layout_constraintBottom_toBottomOf="@+id/tabLayoutIndicator"
             app:layout_constraintEnd_toEndOf="@+id/tabLayoutIndicator"
             app:layout_constraintTop_toTopOf="@+id/tabLayoutIndicator" />
+<!--        <TextView-->
+        <!--            android:id="@+id/tv_next"-->
+        <!--            android:layout_width="wrap_content"-->
+        <!--            android:layout_height="wrap_content"-->
+        <!--            android:layout_marginStart="@dimen/_16sdp"-->
+        <!--            android:fontFamily="@font/tajawal_bold"-->
+        <!--            android:text="تخطي"-->
+        <!--            android:textSize="@dimen/_15ssp"-->
+        <!--            app:layout_constraintBottom_toBottomOf="@+id/tabLayoutIndicator"-->
+        <!--            app:layout_constraintStart_toStartOf="parent"-->
+        <!--            app:layout_constraintTop_toTopOf="@+id/tabLayoutIndicator" />-->
+
+<!--        <TextView-->
+<!--            android:id="@+id/tv_Skip"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:fontFamily="@font/tajawal_bold"-->
+<!--            android:text="@string/skip"-->
+<!--            android:layout_marginEnd="@dimen/_16sdp"-->
+<!--            android:textSize="@dimen/_15ssp"-->
+<!--            app:layout_constraintBottom_toBottomOf="@+id/tabLayoutIndicator"-->
+<!--            app:layout_constraintEnd_toEndOf="parent"-->
+<!--            app:layout_constraintTop_toTopOf="@+id/tabLayoutIndicator" />-->
 
 </androidx.constraintlayout.widget.ConstraintLayout>
