--- a/app/src/main/res/layout/activity_service_request.xml
+++ b/app/src/main/res/layout/activity_service_request.xml
@@ -40,7 +40,10 @@
                 <androidx.cardview.widget.CardView
                     style="@style/style_edittext_services"
                     android:layout_marginTop="@dimen/_15sdp"
-                    app:cardElevation="4dp">
+                    app:cardElevation="4dp"
+                    android:backgroundTint="@color/white"
+
+                    >
 
                     <EditText
                         android:id="@+id/et_name"
@@ -56,7 +59,10 @@
                 <androidx.cardview.widget.CardView
                     style="@style/style_edittext_services"
                     android:layout_marginTop="@dimen/_15sdp"
-                    app:cardElevation="4dp">
+                    app:cardElevation="4dp"
+                    android:backgroundTint="@color/white"
+
+                    >
 
                     <EditText
                         android:id="@+id/et_email"
@@ -65,6 +71,7 @@
                         android:background="@null"
                         android:hint="@string/email"
                         android:paddingEnd="@dimen/_10sdp"
+                        android:backgroundTint="@color/white"
 
                         />
                 </androidx.cardview.widget.CardView>
@@ -72,7 +79,10 @@
                 <androidx.cardview.widget.CardView
                     style="@style/style_edittext_services"
                     android:layout_marginTop="@dimen/_15sdp"
-                    app:cardElevation="4dp">
+                    app:cardElevation="4dp"
+                    android:backgroundTint="@color/white"
+
+                    >
 
                     <EditText
                         android:id="@+id/et_phone"
@@ -91,6 +101,8 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/_15sdp"
                     app:cardElevation="4dp"
+                    android:backgroundTint="@color/white"
+
 
                     >
 
@@ -111,6 +123,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/_15sdp"
                     app:cardElevation="4dp"
+                    android:backgroundTint="@color/white"
 
                     >
 
