--- a/app/src/main/res/layout/fragment_about_company2.xml
+++ b/app/src/main/res/layout/fragment_about_company2.xml
@@ -4,7 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragment.about_app.AboutCompany2Fragment">
+    android:background="@color/white"
+
+    tools:context=".ui.about_app.AboutCompany2Fragment">
 
 
     <ImageView
@@ -31,7 +33,7 @@
 
     <LinearLayout
         android:id="@+id/linearLayout"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
         android:orientation="vertical"
@@ -41,14 +43,13 @@
 
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.97">
+        app:layout_constraintVertical_bias="0.90">
 
         <TextView
             android:id="@+id/textView"
             style="@style/textView_main"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/_10sdp"
             android:text="@string/made_with_love_in_diego"
             app:layout_constraintEnd_toEndOf="@+id/img_logo"
             app:layout_constraintStart_toStartOf="@+id/img_logo"
@@ -57,23 +58,27 @@
         <TextView
             android:id="@+id/textView2"
             style="@style/textView_secondary"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/_10sdp"
-            android:text="@string/digital_marketing_company"
+            android:layout_marginTop="@dimen/_5sdp"
+            android:text="@string/detailsAbout2"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:layout_marginStart="@dimen/_20sdp"
+            android:layout_marginEnd="@dimen/_20sdp"
             app:layout_constraintEnd_toEndOf="@+id/textView"
             app:layout_constraintStart_toStartOf="@+id/textView"
             app:layout_constraintTop_toBottomOf="@+id/textView" />
 
-        <TextView
-            android:id="@+id/textView5"
-            style="@style/textView_secondary"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/_5sdp"
-            android:text="@string/digital_marketing_company"
-            app:layout_constraintEnd_toEndOf="@+id/textView2"
-            app:layout_constraintStart_toStartOf="@+id/textView2"
-            app:layout_constraintTop_toBottomOf="@+id/textView2" />
+<!--        <TextView-->
+<!--            android:id="@+id/textView5"-->
+<!--            style="@style/textView_secondary"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_marginTop="@dimen/_5sdp"-->
+<!--            android:text="@string/digital_marketing_company"-->
+<!--            app:layout_constraintEnd_toEndOf="@+id/textView2"-->
+<!--            app:layout_constraintStart_toStartOf="@+id/textView2"-->
+<!--            app:layout_constraintTop_toBottomOf="@+id/textView2" />-->
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
