--- a/app/src/main/res/layout/fragment_about_company3.xml
+++ b/app/src/main/res/layout/fragment_about_company3.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".about_app.AboutCompany3Fragment">
+    android:background="@color/white"
+    tools:context=".ui.about_app.AboutCompany3Fragment">
 
 
     <ImageView
@@ -19,7 +20,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
         android:orientation="vertical"
@@ -27,7 +28,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.97">
+        app:layout_constraintVertical_bias="0.90">
 
         <TextView
             android:id="@+id/textView"
@@ -39,24 +40,28 @@
         <TextView
             android:id="@+id/textView2"
             style="@style/textView_secondary"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/_10sdp"
-            android:text="@string/digital_marketing_company"
+            android:layout_marginTop="@dimen/_5sdp"
+            android:layout_marginStart="@dimen/_20sdp"
+            android:layout_marginEnd="@dimen/_20sdp"
+            android:text="@string/detailsAbout3"
             app:layout_constraintEnd_toEndOf="@+id/textView"
+            android:layout_gravity="center"
+            android:gravity="center"
             app:layout_constraintStart_toStartOf="@+id/textView"
             app:layout_constraintTop_toBottomOf="@+id/textView" />
 
-        <TextView
-            android:id="@+id/textView5"
-            style="@style/textView_secondary"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/_5sdp"
-            android:text="@string/digital_marketing_company"
-            app:layout_constraintEnd_toEndOf="@+id/textView2"
-            app:layout_constraintStart_toStartOf="@+id/textView2"
-            app:layout_constraintTop_toBottomOf="@+id/textView2" />
+<!--        <TextView-->
+<!--            android:id="@+id/textView5"-->
+<!--            style="@style/textView_secondary"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_marginTop="@dimen/_5sdp"-->
+<!--            android:text="@string/digital_marketing_company"-->
+<!--            app:layout_constraintEnd_toEndOf="@+id/textView2"-->
+<!--            app:layout_constraintStart_toStartOf="@+id/textView2"-->
+<!--            app:layout_constraintTop_toBottomOf="@+id/textView2" />-->
 
     </LinearLayout>
 
