--- a/app/src/main/res/layout/fragment_services.xml
+++ b/app/src/main/res/layout/fragment_services.xml
@@ -22,6 +22,7 @@
             android:id="@+id/cardView4"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:backgroundTint="@color/white"
 
             app:cardCornerRadius="@dimen/_5sdp"
             app:layout_constraintEnd_toEndOf="parent"
