--- a/app/src/main/res/layout/item_articles.xml
+++ b/app/src/main/res/layout/item_articles.xml
@@ -22,6 +22,8 @@
             android:layout_width="@dimen/_70sdp"
             android:layout_height="@dimen/_70sdp"
             app:cardCornerRadius="@dimen/_10sdp"
+            android:backgroundTint="@color/white"
+
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent">
