--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -12,25 +12,33 @@
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
+        <item name="android:forceDarkAllowed" tools:targetApi="q">false</item>
+
         <!-- Customize your theme here. -->
     </style>
 
     <style name="textView_main" >
-        <item name="android:textSize">@dimen/_20ssp</item>
+        <item name="android:textSize">@dimen/_18ssp</item>
         <item name="fontFamily">@font/tajawal_bold</item>
         <item name="android:textColor">@color/purple_200</item>
+        <item name="android:forceDarkAllowed" tools:targetApi="q">false</item>
+
     </style>
 
     <style name="textView_secondary" >
-        <item name="android:textSize">@dimen/_12ssp</item>
+        <item name="android:textSize">@dimen/_11ssp</item>
         <item name="fontFamily">@font/tajawal_bold</item>
         <item name="android:textColor">@color/grey</item>
+        <item name="android:forceDarkAllowed" tools:targetApi="q">false</item>
+
     </style>
 
 
     <style name="style_screen" >
         <item name="android:paddingStart">@dimen/_20sdp</item>
         <item name="android:paddingEnd">@dimen/_20sdp</item>
+        <item name="android:forceDarkAllowed" tools:targetApi="q">false</item>
+
 
     </style>
 
@@ -53,6 +61,8 @@
         <item name="android:textDirection">rtl</item>
 
         <item name="android:layout_marginTop">@dimen/_5sdp</item>
+        <item name="android:forceDarkAllowed" tools:targetApi="q">false</item>
+
     </style>
 
     <style name="button_purple_color_style" >
@@ -65,6 +75,8 @@
         <item name="android:gravity">center</item>
         <item name="android:layout_marginStart">@dimen/_20sdp</item>
         <item name="android:layout_marginEnd">@dimen/_20sdp</item>
+        <item name="android:forceDarkAllowed" tools:targetApi="q">false</item>
+
 
     </style>
 
@@ -72,53 +84,73 @@
         <item name="android:textSize">@dimen/_13ssp</item>
         <item name="fontFamily">@font/tajawal_regular</item>
         <item name="android:textColor">@color/purple_500</item>
+        <item name="android:forceDarkAllowed" tools:targetApi="q">false</item>
+
     </style>
     <style name="textView_purple_small" parent="Theme.AppCompat.DayNight.NoActionBar">
         <item name="android:textSize">@dimen/_11ssp</item>
         <item name="fontFamily">@font/tajawal_regular</item>
         <item name="android:textColor">@color/purple_500</item>
+        <item name="android:forceDarkAllowed" tools:targetApi="q">false</item>
+
     </style>
     <style name="textView_purple_very_small" parent="Theme.AppCompat.DayNight.NoActionBar">
         <item name="android:textSize">@dimen/_10ssp</item>
         <item name="fontFamily">@font/tajawal_regular</item>
         <item name="android:textColor">@color/purple_500</item>
+        <item name="android:forceDarkAllowed" tools:targetApi="q">false</item>
+
     </style>
 
     <style name="textView_purple_medium_bold_large" parent="Theme.AppCompat.DayNight.NoActionBar">
         <item name="android:textSize">@dimen/_14ssp</item>
         <item name="fontFamily">@font/tajawal_bold</item>
         <item name="android:textColor">@color/purple_500</item>
+        <item name="android:forceDarkAllowed" tools:targetApi="q">false</item>
+
     </style>
     <style name="textView_purple_large" parent="Theme.AppCompat.DayNight.NoActionBar">
         <item name="android:textSize">@dimen/_15ssp</item>
         <item name="fontFamily">@font/tajawal_regular</item>
         <item name="android:textColor">@color/purple_500</item>
+        <item name="android:forceDarkAllowed" tools:targetApi="q">false</item>
+
     </style>
     <style name="textView_purple_large_bold" parent="Theme.AppCompat.DayNight.NoActionBar">
         <item name="android:textSize">@dimen/_15ssp</item>
         <item name="fontFamily">@font/tajawal_bold</item>
         <item name="android:textColor">@color/purple_500</item>
+        <item name="android:forceDarkAllowed" tools:targetApi="q">false</item>
+
     </style>
     <style name="textView_purple_large_medium" parent="Theme.AppCompat.DayNight.NoActionBar">
         <item name="android:textSize">@dimen/_17ssp</item>
         <item name="fontFamily">@font/tajawal_regular</item>
         <item name="android:textColor">@color/purple_500</item>
+        <item name="android:forceDarkAllowed" tools:targetApi="q">false</item>
+
     </style>
     <style name="textView_purple_large_medium_bold" parent="Theme.AppCompat.DayNight.NoActionBar">
         <item name="android:textSize">@dimen/_17ssp</item>
         <item name="fontFamily">@font/tajawal_bold</item>
         <item name="android:textColor">@color/purple_500</item>
+        <item name="android:forceDarkAllowed" tools:targetApi="q">false</item>
+
     </style>
     <style name="textView_purple_small_bold" parent="Theme.AppCompat.DayNight.NoActionBar">
         <item name="android:textSize">@dimen/_12ssp</item>
         <item name="fontFamily">@font/tajawal_bold</item>
         <item name="android:textColor">@color/purple_500</item>
+        <item name="android:forceDarkAllowed" tools:targetApi="q">false</item>
+
     </style>
 
     <style name="textView_purple_medium_bold" parent="Theme.AppCompat.DayNight.NoActionBar">
         <item name="android:textSize">@dimen/_13ssp</item>
         <item name="fontFamily">@font/tajawal_bold</item>
         <item name="android:textColor">@color/purple_500</item>
+        <item name="android:forceDarkAllowed" tools:targetApi="q">false</item>
+
     </style>
 
 
@@ -126,37 +158,51 @@
         <item name="android:textSize">@dimen/_12ssp</item>
         <item name="fontFamily">@font/tajawal_regular</item>
         <item name="android:textColor">@color/white</item>
+        <item name="android:forceDarkAllowed" tools:targetApi="q">false</item>
+
     </style>
 
     <style name="textView_white_small_bold" parent="Theme.AppCompat.DayNight.NoActionBar">
         <item name="android:textSize">@dimen/_12ssp</item>
         <item name="fontFamily">@font/tajawal_bold</item>
         <item name="android:textColor">@color/white</item>
+        <item name="android:forceDarkAllowed" tools:targetApi="q">false</item>
+
     </style>
     <style name="textView_white_very_small" parent="Theme.AppCompat.DayNight.NoActionBar">
         <item name="android:textSize">@dimen/_10ssp</item>
         <item name="fontFamily">@font/tajawal_regular</item>
         <item name="android:textColor">@color/white</item>
+        <item name="android:forceDarkAllowed" tools:targetApi="q">false</item>
+
     </style>
     <style name="textView_white_medium" parent="Theme.AppCompat.DayNight.NoActionBar">
         <item name="android:textSize">@dimen/_13ssp</item>
         <item name="fontFamily">@font/tajawal_regular</item>
         <item name="android:textColor">@color/white</item>
+        <item name="android:forceDarkAllowed" tools:targetApi="q">false</item>
+
     </style>
     <style name="textView_white_medium_bold" parent="Theme.AppCompat.DayNight.NoActionBar">
         <item name="android:textSize">@dimen/_13ssp</item>
         <item name="fontFamily">@font/tajawal_bold</item>
         <item name="android:textColor">@color/white</item>
+        <item name="android:forceDarkAllowed" tools:targetApi="q">false</item>
+
     </style>
     <style name="textView_white_large" parent="Theme.AppCompat.DayNight.NoActionBar">
         <item name="android:textSize">@dimen/_15ssp</item>
         <item name="fontFamily">@font/tajawal_regular</item>
         <item name="android:textColor">@color/white</item>
+        <item name="android:forceDarkAllowed" tools:targetApi="q">false</item>
+
     </style>
     <style name="textView_white_large_bold" parent="Theme.AppCompat.DayNight.NoActionBar">
         <item name="android:textSize">@dimen/_15ssp</item>
         <item name="fontFamily">@font/tajawal_bold</item>
         <item name="android:textColor">@color/white</item>
+        <item name="android:forceDarkAllowed" tools:targetApi="q">false</item>
+
     </style>
 
     <!--    black color text view types size -->
@@ -164,37 +210,51 @@
         <item name="android:textSize">@dimen/_10ssp</item>
         <item name="fontFamily">@font/tajawal_regular</item>
         <item name="android:textColor">@color/black</item>
+        <item name="android:forceDarkAllowed" tools:targetApi="q">false</item>
+
     </style>
     <style name="textView_black_small" parent="Theme.AppCompat.DayNight.NoActionBar">
         <item name="android:textSize">@dimen/_11ssp</item>
         <item name="fontFamily">@font/tajawal_regular</item>
         <item name="android:textColor">@color/black</item>
+        <item name="android:forceDarkAllowed" tools:targetApi="q">false</item>
+
     </style>
     <style name="textView_black_large" parent="Theme.AppCompat.DayNight.NoActionBar">
         <item name="android:textSize">@dimen/_12ssp</item>
         <item name="fontFamily">@font/tajawal_regular</item>
         <item name="android:textColor">@color/black</item>
+        <item name="android:forceDarkAllowed" tools:targetApi="q">false</item>
+
     </style>
     <style name="textView_black_very_small_bold" parent="Theme.AppCompat.DayNight.NoActionBar">
         <item name="android:textSize">@dimen/_10ssp</item>
         <item name="fontFamily">@font/tajawal_bold</item>
         <item name="android:textColor">@color/black</item>
+        <item name="android:forceDarkAllowed" tools:targetApi="q">false</item>
+
     </style>
     <style name="textView_black_small_bold" parent="Theme.AppCompat.DayNight.NoActionBar">
         <item name="android:textSize">@dimen/_11ssp</item>
         <item name="fontFamily">@font/tajawal_bold</item>
         <item name="android:textColor">@color/black</item>
+        <item name="android:forceDarkAllowed" tools:targetApi="q">false</item>
+
     </style>
     <style name="textView_black_large_bold" parent="Theme.AppCompat.DayNight.NoActionBar">
         <item name="android:textSize">@dimen/_12ssp</item>
         <item name="fontFamily">@font/tajawal_bold</item>
         <item name="android:textColor">@color/black</item>
+        <item name="android:forceDarkAllowed" tools:targetApi="q">false</item>
+
     </style>
     <style name="textView_bottom_navigation" parent="Theme.AppCompat.DayNight.NoActionBar">
         <item name="android:textSize">@dimen/_12ssp</item>
         <item name="fontFamily">@font/tajawal_regular</item>
         <item name="android:textColor">@color/purple_500</item>
         <item name="android:layout_marginTop">@dimen/_3sdp</item>
+        <item name="android:forceDarkAllowed" tools:targetApi="q">false</item>
+
     </style>
 
 
@@ -203,9 +263,13 @@
         <item name="fontFamily">@font/tajawal_bold</item>
         <item name="android:fontFamily">@font/tajawal_bold</item>
         <item name="textAllCaps">false</item>
+        <item name="android:forceDarkAllowed" tools:targetApi="q">false</item>
+
     </style>
     <style name="icons_font">
         <item name="fontFamily">@font/material_icons_regular</item>
+        <item name="android:forceDarkAllowed" tools:targetApi="q">false</item>
+
     </style>
 
     <style name="style_edittext_services" parent="Theme.AppCompat.DayNight.NoActionBar">
@@ -215,18 +279,24 @@
         <item name="fontFamily">@font/tajawal_regular</item>
         <item name="cardCornerRadius">@dimen/_5sdp</item>
         <item name="android:layout_gravity">end</item>
+        <item name="android:forceDarkAllowed" tools:targetApi="q">false</item>
+
 
     </style>
     <style name="textView_black_small_large" parent="Theme.AppCompat.DayNight.NoActionBar">
         <item name="android:textSize">@dimen/_12ssp</item>
         <item name="fontFamily">@font/tajawal_regular</item>
         <item name="android:textColor">@color/black</item>
+        <item name="android:forceDarkAllowed" tools:targetApi="q">false</item>
+
     </style>
 
     <style name="textView_black_small_large_bold" parent="Theme.AppCompat.DayNight.NoActionBar">
         <item name="android:textSize">@dimen/_12ssp</item>
         <item name="fontFamily">@font/tajawal_bold</item>
         <item name="android:textColor">@color/black</item>
+        <item name="android:forceDarkAllowed" tools:targetApi="q">false</item>
+
     </style>
 
 </resources>
